--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabyte Games</title>
     <link rel="stylesheet" href="responsive.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Red+Hat+Mono:ital,wght@0,300;0,700;1,300;1,700&family=Rubik+Glitch&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <!-- logo de la empresa y nombre -->
+    <!-- Encabezado -->
     <div class="encabezado">
         <img src="img/skull-gaming-with-joy-stick-emblema-estilo-moderno_32991-492.webp" alt="logo">
         <h1>Gabyte Games</h1>
@@ -26,7 +29,7 @@
     </div>
  <!-- Listados -->
  <div class="listado">
-    <div>
+    <div class="juegos">
         <img src="img/hombres-jugando-videojuegos_137573-637.webp" alt="Caratula del juego">
 
             <h2> Fofa 22 </h2>
@@ -34,7 +37,7 @@
             <blockquote>Precio: $999</blockquote>
             <a href="#"> Comprar ahora </a>
         </div>
-        <div>
+        <div class="juegos">
             <img src="img/hombres-jugando-videojuegos_137573-637.webp" alt="Caratula del juego">
         
             <h2> Fofa 22 </h2>
@@ -42,7 +45,7 @@
             <blockquote>Precio: $999</blockquote>
             <a href="#"> Comprar ahora </a>
         </div>
-        <div>
+        <div class="juegos">
             <img src="img/hombres-jugando-videojuegos_137573-637.webp" alt="Caratula del juego">
             
             <h2> Fofa 22 </h2>
